[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "PEHeaderEditor"
authors = [{name = "KOLANICH"}]
description = ""
readme = "ReadMe.md"
keywords = ["PEHeaderEditor"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = ["pefile @ https://github.com/erocarrera/pefile"]
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-tools/PEHeaderEditor.py"

[project.scripts]
PEHeaderEditor = "PEHeaderEditor:main"

[tool.setuptools]
zip-safe = true
py-modules = ["PEHeaderEditor"]
include-package-data = false

[tool.setuptools_scm]
